tests/snapshots/codegen_snapshot_tests__issue372_imported_enum_loop_ownership.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3601
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use crate::rels::ConformanceRel;
fn relation_kind_name_from_conformance(rel: ConformanceRel) -> String {
    let _ = match rel {
        ConformanceRel::Read => {
            return "ReadRel".to_string();
        }
        _ => {
            return "Other".to_string();
        }
    };
}
fn scenario_matches(required: Vec<ConformanceRel>) -> bool {
    for expected in required.iter().cloned() {
        if expected == ConformanceRel::Read {
            if incan_stdlib::strings::str_eq(
                &relation_kind_name_from_conformance(expected.clone()),
                &"ReadRel",
            ) {
                return true;
            }
        }
    }
    return false;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", scenario_matches(vec![ConformanceRel::Read.clone()]));
}
fn main() {
    main();
}
