tests/snapshots/codegen_snapshot_tests__issue383_dict_comp_reuses_noncopy_key.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 3526
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn lengths(names: Vec<String>) -> std::collections::HashMap<String, i64> {
    return names
        .iter()
        .cloned()
        .map(|name| (name.clone(), incan_stdlib::strings::str_len(&(name))))
        .collect::<std::collections::HashMap<_, _>>();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let values = lengths(vec!["alice".to_string(), "bob".to_string()]);
    let _ = println!(
        "{}", * incan_stdlib::collections::dict_get(& values, < _ as AsRef < str >>
        ::as_ref(& "alice"))
    );
}
fn main() {
    main();
}
