tests/snapshots/codegen_snapshot_tests__issue383_loop_helper_shared_string_list.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn match_index(xs: Vec<String>, y: i64) -> i64 {
    let mut idx = 0;
    while idx < ::std::convert::identity(xs.len() as i64) {
        if incan_stdlib::strings::str_len(
            &(incan_stdlib::collections::list_get(&xs, (idx) as i64).clone()),
        ) == y
        {
            return idx;
        }
        idx = idx + 1;
    }
    return -1;
}
fn helper_loop(xs: Vec<String>, ys: Vec<i64>) -> Vec<i64> {
    let mut out: Vec<i64> = vec![];
    for y in ys.iter().copied() {
        let _ = out.push(match_index(xs.clone(), y));
    }
    return out.clone();
}
fn helper_list(xs: Vec<String>, ys: Vec<i64>) -> Vec<i64> {
    return (ys).iter().copied().map(|y| match_index(xs.clone(), y)).collect::<Vec<_>>();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = helper_loop(
        vec!["a".to_string(), "bb".to_string(), "ccc".to_string()],
        vec![1, 2],
    );
    let _ = helper_list(
        vec!["a".to_string(), "bb".to_string(), "ccc".to_string()],
        vec![1, 2],
    );
}
fn main() {
    main();
}
