tests/snapshots/codegen_snapshot_tests__issue483_list_comp_tuple_unpack_enumerate.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 4159
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Binding {
    name: String,
    output_index: i64,
    expr_index: i64,
}
impl incan_stdlib::reflection::HasClassName for Binding {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Binding {
    fn __class_name__() -> &'static str {
        "Binding"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Binding {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Binding {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 3] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("name"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("name"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("output_index"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("output_index"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("expr_index"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("expr_index"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Binding {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "name" => Some(format!("{}", self.name)),
            "output_index" => Some(format!("{}", self.output_index)),
            "expr_index" => Some(format!("{}", self.expr_index)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("name".to_string(), format!("{}", self.name)), ("output_index".to_string(),
            format!("{}", self.output_index)), ("expr_index".to_string(), format!("{}",
            self.expr_index))
        ]
    }
}
fn field_ref(index: i64) -> i64 {
    return index;
}
pub fn bind(xs: Vec<String>) -> Vec<Binding> {
    return (xs.iter().enumerate().map(|(idx, value)| (idx as i64, value.clone())))
        .map(|(idx, name)| Binding {
            name: name.to_string(),
            output_index: idx,
            expr_index: field_ref(idx),
        })
        .collect::<Vec<_>>();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = bind(vec!["a".to_string(), "bb".to_string()]);
}
fn main() {
    main();
}
